<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/password_change"
    android:weightSum="2"
    tools:context=".ui.settings.changePassword.view.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <fragment
            android:name="com.binas.yak.ui.main.view.TransparentActionBarFragment"
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/oldPassword"
            android:textColorHint="@drawable/selector"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/rounded_input"
            android:ems="10"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="center"
            android:hint="@string/oldPassword"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newPassword"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_input"
            android:ems="10"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="center"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@drawable/selector"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newPasswordRepeat"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/rounded_input"
            android:ems="10"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="center"
            android:hint="@string/passwordRepeat"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@drawable/selector"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/signupButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/next_button"
            android:onClick="onClickChangePassword" />

    </LinearLayout>


</LinearLayout>