<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"

    tools:context=".ui.authentication.login.view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_extrabold"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="top"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailEditText"
                android:textColorHint="@drawable/selector"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/rounded_input"
                android:ems="10"
                android:fontFamily="@font/open_sans_extrabold"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:textColorHint="@drawable/selector"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/rounded_input"
                android:ems="10"
                android:fontFamily="@font/open_sans_extrabold"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/resetPasswordButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/open_sans_extrabold"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/remindPassword"
                android:textSize="20sp"
                android:onClick="onClickGoToResetPassword"/>

            <ImageButton
                android:id="@+id/signupButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/next_button"
                android:onClick="onClickLoginButton" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingAnimation"
            android:layout_width="250dp"
            android:layout_height="150dp" />

    </LinearLayout>

</RelativeLayout>